refactoring, should have no behavior changes

--- a/TASVideos/wwwroot/css/partials/_colors.scss
+++ b/TASVideos/wwwroot/css/partials/_colors.scss
@@ -15,6 +15,8 @@ $light: #f8f9fa;
 $light-rgb: 248,249,250;
 $dark: #212529;
 $dark-rgb: 33, 37, 41;
+$dropdown-text-dark: #dee2e6;
+$dropdown-background-dark: #343a40;
 $banner: #110931;
 $tasvideos-bg: #e9ecef;
 $tasvideos-bg-gradient: #c2d4fc;
@@ -24,7 +26,9 @@ $card-primary: #acd;
 $card-primary-dark: #214354;
 $card-secondary: #cde;
 $card-secondary-dark: #112132;
+$card-link-hover-rgb: 9, 30, 66;
 $bs-table-striped-bg-dark: #2c3034;
 $bs-table-active-bg-dark: #373b3e;
 $bs-table-hover-bg-dark: #323539;
 $text-muted-dark: #818a92;
+$module-error-color: #f8d7da;
