--- a/TASVideos/wwwroot/css/site.scss
+++ b/TASVideos/wwwroot/css/site.scss
@@ -1,3 +1,4 @@
 ﻿@import "partials/colors";
+@import "partials/variables";
 @import "partials/bootstrap-overrides";
 @import "partials/customizations";
