--- a/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
+++ b/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
@@ -1,4 +1,5 @@
 ﻿/// <reference path="colors.scss" />
+/// <reference path="variables.scss" />
 
 :root {
 	--bs-primary: #{$primary};
@@ -23,19 +24,13 @@ a {
 }
 
 h1 {
-	margin: 0 auto 0 auto;
-	padding: 5px 10px 5px 10px;
+	margin: 0 auto;
+	padding: 5px 10px;
 	border-radius: 5px;
 	font-size: 1.25em;
 	line-height: 1.5;
 	background: var(--bs-secondary);
 	color: $white;
-
-	&.publication-header {
-		border-radius: 0;
-		border-top-right-radius: .25rem;
-		border-top-left-radius: .25rem;
-	}
 }
 
 h2 {
@@ -94,7 +89,7 @@ h4 {
 	text-decoration: none;
 
 	&:hover {
-		box-shadow: rgba(9, 30, 66, 0.25) 0 4px 8px -2px, rgba(9, 30, 66, 0.31) 0 0 1px;
+		box-shadow: RGBA($card-link-hover-rgb, 0.25) 0 4px 8px -2px, RGBA($card-link-hover-rgb, 0.31) 0 0 1px;
 		transition: opacity 140ms ease-in-out 0;
 		transform: translate3d(0, -2px, 0);
 	}
