--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -1,4 +1,5 @@
-﻿/// <reference path="colors.scss" />
+/// <reference path="colors.scss" />
+/// <reference path="variables.scss" />
 
 :root {
 	--cardprimary: #{$card-primary};
@@ -87,7 +88,7 @@ article.wiki table {
 	color: var(--bs-danger);
 	border: 1px solid var(--bs-danger);
 	border-radius: 5px;
-	background-color: #f8d7da;
+	background-color: $module-error-color;
 	padding: .75rem 1.25rem;
 }
 
@@ -243,8 +244,7 @@ article.wiki table {
 	background: $banner;
 
 	.site-banner {
-		top: 0;
-		left: 0;
+		height: 100%;
 	}
 
 	@media (min-width: 768px) {
