--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 	<link rel="stylesheet" href="/css/site.css" />
-	<link rel="stylesheet" id="DarkmodeInitial" href="/css/darkmode-initial.css" />
+	<link rel="stylesheet" id="style-dark-initial" href="/css/darkmode-initial.css" />
 	<link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.css" />
 
 	<link rel="stylesheet" href="~/css/diffview.css" />
@@ -55,8 +55,8 @@
 			</picture>
 			<div id="mantra">
 				<a id="brand" asp-page="/Index">TASVideos</a>
-				<div id="mantra1">Tool-assisted game movies</div>
-				<div id="mantra2">When human skills are just not enough</div>
+				<div id="mantra-1">Tool-assisted game movies</div>
+				<div id="mantra-2">When human skills are just not enough</div>
 			</div>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
