--- a/TASVideos/Pages/_ViewImports.cshtml
+++ b/TASVideos/Pages/_ViewImports.cshtml
@@ -1,11 +1,12 @@
 @namespace TASVideos.Pages
 @using Microsoft.AspNetCore.Identity
 @using TASVideos
-@using TASVideos.Common 
+@using TASVideos.Common
 @using TASVideos.Data
 @using TASVideos.Data.Entity
 @using TASVideos.Extensions
 @using TASVideos.Core.Services
 @using TASVideos.ViewComponents
 @addTagHelper TASVideos.TagHelpers.*, TASVideos
+@addTagHelper *, WebOptimizer.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
