create a form-button-bar taghelper that ensures submit/cancel/etc buttons are centered, and with predictable vertical spacing, wire it up in a few places.  Still needs to be used in more places

--- a/TASVideos/Pages/Forum/Edit.cshtml
+++ b/TASVideos/Pages/Forum/Edit.cshtml
@@ -41,11 +41,10 @@
 			</div>
 		}
 	</div>
-	<hr />
-	<div class="text-center">
+	<form-button-bar>
 		<button type="submit" class="btn btn-primary">Update</button>
 		<a asp-page="Index" class="btn btn-secondary">Cancel</a>
-	</div>
+	</form-button-bar>
 </form>
 <script>
 	function IncrementOrdinal(elem) {
