--- a/TASVideos/Pages/Forum/Posts/Edit.cshtml
+++ b/TASVideos/Pages/Forum/Posts/Edit.cshtml
@@ -50,11 +50,11 @@
 		<textarea asp-for="Post.Text" class="form-control" rows="20"></textarea>
 		<span asp-validation-for="Post.Text" class="text-danger"></span>
 	</form-group>
-	<div class="text-center">
+	<form-button-bar>
 		<button type="button" class="btn btn-secondary" id="preview-button">Preview</button>
 		<button type="submit" class="btn btn-primary">Save</button>
 		<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Post.TopicId" class="btn btn-secondary">Cancel</a>
-	</div>
+	</form-button-bar>
 </form>
 <partial name="_PreviewWindow" model="@(("Post_Text", "/Forum/Preview"))" />
 @section Scripts {
