User Profile - properly count number of ratings, only count non-obsolete, add label that says not obsolete (same wording as legacy site)

--- a/TASVideos/Pages/Shared/_Profile.cshtml
+++ b/TASVideos/Pages/Shared/_Profile.cshtml
@@ -180,9 +180,11 @@
 						Total Movies Rated:
 						<a asp-page="/Users/Ratings"
 							asp-route-userName="@Model.UserName">
-							@Model.Ratings.TotalMoviesRated
+							@(Model.Ratings.TotalMoviesRated / 2.0)
 						</a>
 					</label>
+					<br />
+					<label>(Ratings of obsolete movies are not counted)</label>
 				</div>
 			</cardbody>
 		</card>
