Profile - fix some inconsistent spelling

--- a/TASVideos/Pages/Shared/_Profile.cshtml
+++ b/TASVideos/Pages/Shared/_Profile.cshtml
@@ -116,7 +116,7 @@
 					</p>
 					<label>Last Edit On: <timezone-convert asp-for="@Model.WikiEdits.LastEditDateTime" date-only="true" /></label>
 					<br />
-					<label>First Edit on: <timezone-convert asp-for="@Model.WikiEdits.FirstEditDateTime" date-only="true" /></label>
+					<label>First Edit On: <timezone-convert asp-for="@Model.WikiEdits.FirstEditDateTime" date-only="true" /></label>
 				</div>
 			</cardbody>
 		</card>
