add back button to /Ratings and Publications/Rate, fixes #430

--- a/TASVideos/Pages/Ratings/Index.cshtml
+++ b/TASVideos/Pages/Ratings/Index.cshtml
@@ -41,4 +41,6 @@ else
 {
 	<warning-alert>No Ratings</warning-alert>
 }
-
+<form-button-bar>
+	<a class="btn btn-secondary" href="/@(Model.Id)M">Back To Publication</a>
+</form-button-bar>
