--- a/TASVideos/Pages/Publications/Rate.cshtml
+++ b/TASVideos/Pages/Publications/Rate.cshtml
@@ -29,9 +29,10 @@
 			</form-group>
 		</div>
 	</row>
-	<div class="mt-2 text-center">
+	<form-button-bar>
 		<button type="submit" class="btn btn-primary">Rate</button>
-	</div>
+		<a class="btn btn-secondary" href="/@(Model.Id)M">Back</a>
+	</form-button-bar>
 </form>
 <hr />
 @await Component.RenderWiki("System/MovieRatingGuidelines")
