--- a/TASVideos/Pages/Shared/_UserFileInfo.cshtml
+++ b/TASVideos/Pages/Shared/_UserFileInfo.cshtml
@@ -39,7 +39,7 @@
 	<div class="card-body">
 		<div class="card-text">
 			<p>@Model.FileName</p>
-			<p>Uploaded <timezone-convert asp-for="@Model.UploadTimestamp" /> by @Model.Author</p>
+			<p>Uploaded <timezone-convert asp-for="@Model.UploadTimestamp" /> by <profile-link username="@Model.Author"></profile-link></p>
 
 			@if (Model.GameId.HasValue)
 			{
