--- a/TASVideos/Pages/UserFiles/ForUser.cshtml
+++ b/TASVideos/Pages/UserFiles/ForUser.cshtml
@@ -6,6 +6,7 @@
 }
 
 <a asp-page="Index" class="btn btn-secondary btn-sm mb-2">All User Files</a>
+<profile-link class="btn btn-secondary btn-sm mb-2" username="@Model.UserName">Profile for @Model.UserName</profile-link>
 <a asp-page="/UserFiles/Upload" class="btn btn-secondary btn-sm float-end">Upload</a>
 <partial name="_Pager" model="Model.Files" />
 
