sum and display compressed file sizes instead of uncompressed

--- a/TASVideos/Pages/Profile/UserFiles.cshtml
+++ b/TASVideos/Pages/Profile/UserFiles.cshtml
@@ -4,7 +4,7 @@
 @{
 	ViewData["Title"] = "My Files";
 	ViewData.AddActivePage(ProfileNavPages.UserFiles);
-	var used = Model.Files.Sum(f => f.FileSize);
+	var used = Model.Files.Sum(f => f.FileSizeCompressed);
 }
 
 <fullrow>
