refactor dark mode form control support
fixes #443

--- a/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
+++ b/TASVideos/wwwroot/css/partials/_bootstrap-overrides.scss
@@ -51,6 +51,11 @@ h4 {
 
 .form-control {
 	font-size: .875rem;
+
+	&, &:focus {
+		color: var(--bs-dark);
+		background-color: var(--bs-light);
+	}
 }
 
 .btn {
