--- a/TASVideos/Pages/Forum/Subforum/Edit.cshtml
+++ b/TASVideos/Pages/Forum/Subforum/Edit.cshtml
@@ -27,8 +27,8 @@
 		<span asp-validation-for="Forum.Description" class="text-danger"></span>
 	</fullrow>
 	<form-button-bar>
-		<button type="submit" class="btn btn-primary">Update</button>
-		<a asp-page="Index" asp-route-id="@Model.Id" class="btn btn-secondary">Cancel</a>
+		<button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Update</button>
+		<a asp-page="Index" asp-route-id="@Model.Id" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</form-button-bar>
 </form>
 
