--- a/TASVideos/Pages/Forum/Topics/SetType.cshtml
+++ b/TASVideos/Pages/Forum/Topics/SetType.cshtml
@@ -19,8 +19,8 @@
 		</column>
 	</row>
 	<div class="text-center mt-3">
-		<button type="submit" class="btn btn-primary">Save</button>
-		<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.TopicId" class="btn btn-secondary">Cancel</a>
+		<button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Save</button>
+		<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.TopicId" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
 
