--- a/TASVideos/Pages/Forum/Topics/Split.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Split.cshtml
@@ -63,8 +63,8 @@
 		</small>
 	</div>
 	<div class="text-center mt-2">
-		<button type="submit" class="btn btn-primary">Split</button>
-		<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Id" class="btn btn-secondary">Cancel</a>
+		<button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Split</button>
+		<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Id" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
 
