--- a/TASVideos/Pages/Forum/Topics/_TopicActionBar.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicActionBar.cshtml
@@ -27,14 +27,14 @@
    asp-route-id="@Model.Id"
    class="btn btn-sm btn-warning"
    title="Move this topic">
-	<i class="fa fa-location-arrow"></i>
+	<i class="fa fa-arrows"></i>
 </a>
 <a permission="SplitTopics"
 	asp-page="Split"
 	asp-route-id="@Model.Id"
 	class="btn btn-sm btn-warning"
 	title="Split this topic">
-	<i class="fa fa-code-fork"></i>
+	<i class="fa fa-scissors"></i>
 </a>
 <a permission="MergeTopics"
 	asp-page="Merge"
