--- a/TASVideos/Pages/Index.cshtml
+++ b/TASVideos/Pages/Index.cshtml
@@ -11,6 +11,6 @@
 <a condition="@canEdit"
    asp-page="/Wiki/Edit"
    asp-route-path="System/FrontPage"
-   class="btn btn-primary btn-sm">
-	Edit
+   class="btn btn-primary btn-sm border border-warning">
+	<i class="fa fa-pencil"></i> Edit
 </a>
