--- a/TASVideos/Pages/Publications/EditTier.cshtml
+++ b/TASVideos/Pages/Publications/EditTier.cshtml
@@ -16,8 +16,8 @@
 		</div>
 	</row>
 	<div class="text-center mt-3">
-		<submit-button class="btn btn-primary">Update</submit-button>
-		<a asp-page="Edit" asp-route-id="@Model.Id" class="btn btn-secondary">Back To Edit</a>
+		<submit-button class="btn btn-primary"><span class="fa fa-save"></span> Update</submit-button>
+		<a asp-page="Edit" asp-route-id="@Model.Id" class="btn btn-secondary"><span class="fa fa-arrow-left"></span> Back To Edit</a>
 	</div>
 </form>
 
