--- a/TASVideos/Pages/Publications/Rate.cshtml
+++ b/TASVideos/Pages/Publications/Rate.cshtml
@@ -30,8 +30,8 @@
 		</div>
 	</row>
 	<form-button-bar>
-		<button type="submit" class="btn btn-primary">Rate</button>
-		<a class="btn btn-secondary" href="/@(Model.Id)M">Back</a>
+		<button type="submit" class="btn btn-primary"><span class="fa fa-save"></span> Rate</button>
+		<a class="btn btn-secondary" href="/@(Model.Id)M"><span class="fa fa-arrow-left"></span> Back</a>
 	</form-button-bar>
 </form>
 <hr />
