--- a/TASVideos/Pages/Ratings/Index.cshtml
+++ b/TASVideos/Pages/Ratings/Index.cshtml
@@ -42,5 +42,5 @@ else
 	<warning-alert>No Ratings</warning-alert>
 }
 <form-button-bar>
-	<a class="btn btn-secondary" href="/@(Model.Id)M">Back To Publication</a>
+	<a class="btn btn-secondary" href="/@(Model.Id)M"><span class="fa fa-arrow-left"></span> Back To Publication</a>
 </form-button-bar>
