--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -103,7 +103,7 @@
 	<footer class="mb-3">
 		<row class="justify-content-start align-items-center">
 			<p class="col-auto my-auto">&copy; @DateTime.UtcNow.Year - TASVideos <a href="https://github.com/adelikat/tasvideos/commit/@ViewData["VersionSha"]">v@(ViewData["Version"])</a></p>
-			<button class="btn btn-secondary btn-sm col-auto" id="ToggleDarkMode" onclick="toggleDarkMode()">Toggle Dark Mode</button>
+			<button class="btn btn-secondary btn-sm col-auto" id="ToggleDarkMode" onclick="toggleDarkMode()"><i class="fa fa-moon-o"></i> Toggle Dark Mode</button>
 		</row>
 	</footer>
 </div>
