--- a/TASVideos/Pages/Submissions/Edit.cshtml
+++ b/TASVideos/Pages/Submissions/Edit.cshtml
@@ -112,9 +112,9 @@
 	</fullrow>
 	<hr />
 	<fullrow class="text-center">
-		<button id="preview-button" type="button" class="btn btn-secondary">Preview</button>
-		<button id="submit-btn" type="submit" class="btn btn-primary @(Model.Submission.Markup.Length > 0 ? "" : "hide")">Update</button>
-		<a class="btn btn-secondary" asp-page="View" asp-route-id="@Model.Id">Cancel</a>
+		<button id="preview-button" type="button" class="btn btn-secondary"><i class="fa fa-eye"></i> Preview</button>
+		<button id="submit-btn" type="submit" class="btn btn-primary @(Model.Submission.Markup.Length > 0 ? "" : "hide")"><i class="fa fa-save"></i> Update</button>
+		<a class="btn btn-secondary" asp-page="View" asp-route-id="@Model.Id"><i class="fa fa-times"></i> Cancel</a>
 	</fullrow>
 </form>
 
