--- a/TASVideos/Pages/Submissions/Index.cshtml
+++ b/TASVideos/Pages/Submissions/Index.cshtml
@@ -80,7 +80,7 @@
 			<select asp-for="Search.System" asp-items="Model.SystemList" class="form-control"></select>
 		</column>
 	</row>
-	<button type="submit" class="btn btn-secondary mt-1">Filter</button>
+	<button type="submit" class="btn btn-secondary mt-1"><i class="fa fa-filter"></i> Filter</button>
 </form>
 <hr />
 <partial name="_Pager" model="Model.Submissions" />
