--- a/TASVideos/Pages/Submissions/Submit.cshtml
+++ b/TASVideos/Pages/Submissions/Submit.cshtml
@@ -93,8 +93,8 @@
 	</fullrow>
 	<hr />
 	<fullrow class="text-center">
-		<button id="preview-button" type="button" class="btn btn-secondary">Preview</button>
-		<submit-button id="submit-btn" class="btn btn-primary @(Model.Create.Markup.Length > 0 ? "" : "d-none")">Submit</submit-button>
+		<button id="preview-button" type="button" class="btn btn-secondary"><i class="fa fa-eye"></i> Preview</button>
+		<submit-button id="submit-btn" class="btn btn-primary border border-warning @(Model.Create.Markup.Length > 0 ? "" : "d-none")">Submit</submit-button>
 		<br />
 		<br />
 		<div id="submit-blurb" class="text-center alert-info d-none" role="alert">
