--- a/TASVideos/Pages/Tiers/Edit.cshtml
+++ b/TASVideos/Pages/Tiers/Edit.cshtml
@@ -43,8 +43,8 @@
 		</column>
 	</row>
 	<div class="text-center mt-3">
-		<submit-button class="btn btn-primary">Save</submit-button>
-		<a class="btn btn-secondary" asp-page="Index">Cancel</a>
+		<submit-button class="btn btn-primary"><i class="fa fa-save"></i> Save</submit-button>
+		<a class="btn btn-secondary" asp-page="Index"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
 
