--- a/TASVideos/Pages/Wiki/Referrers.cshtml
+++ b/TASVideos/Pages/Wiki/Referrers.cshtml
@@ -5,7 +5,7 @@
 	ViewData["Title"] = $"Referrers for {link}";
 }
 
-<a class="btn btn-secondary" href="/@link">Back to Page</a>
+<a class="btn btn-secondary" href="/@link"><span class="fa fa-arrow-left"></span> Back to Page</a>
 <br />
 <br />
 <label>Referrers (@Model.Referrals.Count() Total)</label>
