--- a/TASVideos/Pages/Wiki/ViewSource.cshtml
+++ b/TASVideos/Pages/Wiki/ViewSource.cshtml
@@ -10,7 +10,7 @@
 	</small>
 </div>
 <div>
-	<a href="/@Model.WikiPage.PageName" class="btn btn-secondary">Back to Page</a>
+	<a href="/@Model.WikiPage.PageName" class="btn btn-secondary"><span class="fa fa-arrow-left"></span> Back to Page</a>
 </div>
 <hr />
 @Html.Raw(Model.WikiPage.Markup.Replace("\n", "<br />"))
