--- a/TASVideos/Pages/Forum/Edit.cshtml
+++ b/TASVideos/Pages/Forum/Edit.cshtml
@@ -42,8 +42,8 @@
 		}
 	</div>
 	<form-button-bar>
-		<button type="submit" class="btn btn-primary">Update</button>
-		<a asp-page="Index" class="btn btn-secondary">Cancel</a>
+		<button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Update</button>
+		<a asp-page="Index" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</form-button-bar>
 </form>
 <script>
