--- a/TASVideos/Pages/Forum/Posts/Create.cshtml
+++ b/TASVideos/Pages/Forum/Posts/Create.cshtml
@@ -28,9 +28,9 @@
 		<span asp-validation-for="Post.Text" class="text-danger"></span>
 	</form-group>
 	<form-button-bar>
-		<button type="button" class="btn btn-secondary" id="preview-button">Preview</button>
-		<submit-button class="btn btn-primary">Save</submit-button>
-		<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.TopicId" class="btn btn-secondary">Cancel</a>
+		<button type="button" class="btn btn-secondary" id="preview-button"><i class="fa fa-eye"></i> Preview</button>
+		<submit-button class="btn btn-primary"><i class="fa fa-plus"></i> Post</submit-button>
+		<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.TopicId" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</form-button-bar>
 </form>
 
