--- a/TASVideos/Pages/Forum/Posts/Edit.cshtml
+++ b/TASVideos/Pages/Forum/Posts/Edit.cshtml
@@ -51,9 +51,9 @@
 		<span asp-validation-for="Post.Text" class="text-danger"></span>
 	</form-group>
 	<form-button-bar>
-		<button type="button" class="btn btn-secondary" id="preview-button">Preview</button>
-		<button type="submit" class="btn btn-primary">Save</button>
-		<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Post.TopicId" class="btn btn-secondary">Cancel</a>
+		<button type="button" class="btn btn-secondary" id="preview-button"><i class="fa fa-eye"></i> Preview</button>
+		<button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Save</button>
+		<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Post.TopicId" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</form-button-bar>
 </form>
 <partial name="_PreviewWindow" model="@(("Post_Text", "/Forum/Preview"))" />
