--- a/TASVideos/Pages/Forum/Topics/AddEditPoll.cshtml
+++ b/TASVideos/Pages/Forum/Topics/AddEditPoll.cshtml
@@ -10,7 +10,7 @@
 <form method="post">
 	<partial name="_PollCreate" model="Model.Poll" />
 	<div class="text-center">
-		<button type="submit" class="btn btn-primary">@mode</button>
-		<a asp-page="Index" asp-route-id="@Model.TopicId" class="btn btn-secondary">Cancel</a>
+		<button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> @mode</button>
+		<a asp-page="Index" asp-route-id="@Model.TopicId" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
