--- a/TASVideos/Pages/Forum/Topics/Create.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Create.cshtml
@@ -65,9 +65,9 @@
 		<span asp-validation-for="Topic.Post" class="text-danger"></span>
 	</form-group>
 	<div class="text-center">
-		<button type="button" class="btn btn-secondary" id="preview-button">Preview</button>
-		<button type="submit" class="btn btn-primary">Save</button>
-		<a asp-page="/Forum/Subforum/Index" asp-route-id="@Model.ForumId" class="btn btn-secondary">Cancel</a>
+		<button type="button" class="btn btn-secondary" id="preview-button"><i class="fa fa-eye"></i> Preview</button>
+		<button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Save</button>
+		<a asp-page="/Forum/Subforum/Index" asp-route-id="@Model.ForumId" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
 
