--- a/TASVideos/Pages/Forum/Topics/Merge.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Merge.cshtml
@@ -30,8 +30,8 @@
 		</column>
 	</row>
 	<div class="text-center mt-2">
-		<button type="submit" class="btn btn-primary">Merge</button>
-		<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Id" class="btn btn-secondary">Cancel</a>
+		<button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Merge</button>
+		<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Id" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
 
