--- a/TASVideos/Pages/Forum/Topics/Move.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Move.cshtml
@@ -19,8 +19,8 @@
 		<span asp-validation-for="Topic.ForumId" class="text-danger"></span>
 	</form-group>
 	<div class="text-center">
-		<button type="submit" class="btn btn-primary">Move</button>
-		<a asp-page="Index" asp-route-id="@Model.Id" class="btn btn-secondary">Cancel</a>
+		<button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Move</button>
+		<a asp-page="Index" asp-route-id="@Model.Id" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
 
