--- a/TASVideos/Pages/Forum/_Category.cshtml
+++ b/TASVideos/Pages/Forum/_Category.cshtml
@@ -2,7 +2,7 @@
 
 <card class="mb-2">
 	<cardheader>
-		<a permission="EditCategories" asp-page="Edit" asp-route-id="@Model.Id" class="btn btn-primary btn-sm float-end">Edit</a>
+		<a permission="EditCategories" asp-page="Edit" asp-route-id="@Model.Id" class="btn btn-primary btn-sm border border-warning float-end"><i class="fa fa-pencil"></i> Edit</a>
 		<h4>@Model.Title</h4>
 		@if (!string.IsNullOrWhiteSpace(Model.Description))
 		{
