--- a/TASVideos/Pages/Games/Edit.cshtml
+++ b/TASVideos/Pages/Games/Edit.cshtml
@@ -66,9 +66,9 @@
 	<two-column-select id-list="Game.Genres" available-list="@Model.AvailableGenres"/>
 	<hr />
 	<div class="text-center">
-		<button id="submit-btn" type="submit" class="btn btn-primary">Update</button>
-		<a condition="!string.IsNullOrWhiteSpace(returnUrl)" href="@returnUrl" class="btn btn-secondary">Cancel</a>
-		<a condition="string.IsNullOrWhiteSpace(returnUrl)" asp-page="List" class="btn btn-secondary">Cancel</a>
+		<button id="submit-btn" type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Update</button>
+		<a condition="!string.IsNullOrWhiteSpace(returnUrl)" href="@returnUrl" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
+		<a condition="string.IsNullOrWhiteSpace(returnUrl)" asp-page="List" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
 
