--- a/TASVideos/Pages/Games/Roms/Edit.cshtml
+++ b/TASVideos/Pages/Games/Roms/Edit.cshtml
@@ -59,9 +59,9 @@
 		</div>
 	</row>
 	<div class="text-center">
-		<button id="submit-btn" type="submit" class="btn btn-primary">Update</button>
-		<a condition="!string.IsNullOrWhiteSpace(returnUrl)" href="@returnUrl" class="btn btn-secondary">Cancel</a>
-		<a condition="string.IsNullOrWhiteSpace(returnUrl)" asp-page="List" class="btn btn-secondary">Cancel</a>
+		<button id="submit-btn" type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Update</button>
+		<a condition="!string.IsNullOrWhiteSpace(returnUrl)" href="@returnUrl" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
+		<a condition="string.IsNullOrWhiteSpace(returnUrl)" asp-page="List" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
 
