--- a/TASVideos/Pages/Messages/Create.cshtml
+++ b/TASVideos/Pages/Messages/Create.cshtml
@@ -39,9 +39,9 @@
 		</form-group>
 	</row>
 	<div class="text-center">
-		<button type="button" class="btn btn-secondary" id="preview-button">Preview</button>
-		<button type="submit" class="btn btn-primary">Save</button>
-		<a asp-page="Inbox" class="btn btn-secondary">Cancel</a>
+		<button type="button" class="btn btn-secondary" id="preview-button"><i class="fa fa-eye"></i> Preview</button>
+		<button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Save</button>
+		<a asp-page="Inbox" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
 
