--- a/TASVideos/Pages/Profile/UserFiles.cshtml
+++ b/TASVideos/Pages/Profile/UserFiles.cshtml
@@ -8,7 +8,7 @@
 }
 
 <fullrow>
-	<a asp-page="/UserFiles/Upload" class="btn btn-secondary">Upload</a>
+	<a asp-page="/UserFiles/Upload" class="btn btn-secondary"><i class="fa fa-upload"></i> Upload</a>
 	<a asp-page="/UserFiles/Index" class="btn btn-secondary float-end">All User Files</a>
 </fullrow>
 <hr />
