--- a/TASVideos/Pages/Publications/Catalog.cshtml
+++ b/TASVideos/Pages/Publications/Catalog.cshtml
@@ -52,8 +52,8 @@
 	<hr/>
 	<row>
 		<div class="text-center col-12">
-			<button id="submit-btn" type="submit" class="btn btn-primary">Update</button>
-			<a class="btn btn-secondary" asp-page="View" asp-route-id="@Model.Id">Cancel</a>
+			<button id="submit-btn" type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Update</button>
+			<a class="btn btn-secondary" asp-page="View" asp-route-id="@Model.Id"><i class="fa fa-times"></i> Cancel</a>
 		</div>
 	</row>
 </form>
