--- a/TASVideos/Pages/Publications/View.cshtml
+++ b/TASVideos/Pages/Publications/View.cshtml
@@ -14,17 +14,16 @@
 	last edited by @Model.Publication.LastUpdateUser on @Model.Publication.LastUpdateTimestamp
 </small>
 <br />
-<a
-	asp-page="/Wiki/PageHistory"
-	asp-route-path="@(LinkConstants.PublicationWikiPage + Model.Id)"
-	class="btn bg-info text-dark btn-sm">
-	Page History
+<a asp-page="/Wiki/PageHistory"
+   asp-route-path="@(LinkConstants.PublicationWikiPage + Model.Id)"
+   class="btn bg-info text-dark btn-sm">
+	<span class="fa fa-history"></span> Page History
 </a>
 <a
 	asp-page="/Wiki/Diff"
 	asp-route-path="@(LinkConstants.PublicationWikiPage + Model.Id)"
 	class="btn bg-info text-dark btn-sm">
-	Last diff
+	Latest diff
 </a>
 <a
 	asp-page="/Wiki/Referrers"
