--- a/TASVideos/Pages/RamAddresses/Index.cshtml
+++ b/TASVideos/Pages/RamAddresses/Index.cshtml
@@ -27,7 +27,7 @@
 	}
 }
 
-<a asp-page="Edit" asp-route-id="@Model.Id" permission="EditRamAddresses" class="btn btn-primary float-end mb-2">Edit</a>
+<a asp-page="Edit" asp-route-id="@Model.Id" permission="EditRamAddresses" class="btn btn-primary border border-warning float-end mb-2"><i class="fa fa-pencil"></i> Edit</a>
 <div class="table-container">
 	<table class="table table-striped table-bordered">
 		<tr>
