--- a/TASVideos/Pages/Roles/AddEdit.cshtml
+++ b/TASVideos/Pages/Roles/AddEdit.cshtml
@@ -74,8 +74,8 @@
 		</row>
 	</form-group>
 	<div class="text-center mt-3">
-		<submit-button class="btn btn-primary">@(Model.Id.HasValue ? "Update" : "Save")</submit-button>
-		<a asp-page="List" class="btn btn-secondary">Cancel</a>
+		<submit-button class="btn btn-primary"><i class="fa fa-save"></i> @(Model.Id.HasValue ? "Update" : "Save")</submit-button>
+		<a asp-page="List" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
 <script>
