--- a/TASVideos/Pages/Roles/_Role.cshtml
+++ b/TASVideos/Pages/Roles/_Role.cshtml
@@ -5,7 +5,7 @@
 		<row>
 			<div class="col-md-6">
 				<div permission="EditRoles">
-					<a asp-page="AddEdit" asp-route-id="@Model.Id" class="btn btn-primary mb-m">Edit</a>
+					<a asp-page="AddEdit" asp-route-id="@Model.Id" class="btn btn-primary mb-m border border-warning"><i class="fa fa-pencil"></i> Edit</a>
 				</div>
 				<span>@Model.Description</span>
 				<div condition="Model.IsDefault">
