--- a/TASVideos/Pages/Shared/_UserFileInfo.cshtml
+++ b/TASVideos/Pages/Shared/_UserFileInfo.cshtml
@@ -22,7 +22,7 @@
 		<h4>
 			#@Model.Id - @Model.Title
 			<span condition="canEdit" class="float-end">
-				<button class="btn btn-secondary btn-sm">Edit</button>
+				<button class="btn btn-primary btn-sm border border-warning"><i class="fa fa-pencil"></i> Edit</button>
 				<delete-button
 					class="btn-sm",
 					warning-message="Are you sure you want to delete this file?"
@@ -93,11 +93,11 @@
 							<form method="POST" asp-page="/UserFiles/Index" asp-route-handler="EditComment" asp-route-returnUrl="@Context.ReturnUrl()">
 								<input type="hidden" name="commentId" value="@comment.Id" />
 								<textarea name="comment" class="form-control">@comment.Text</textarea>
-								<button type="submit" class="btn btn-secondary btn-sm mt-1">Post</button>
+								<button type="submit" class="btn btn-primary btn-sm mt-1"><i class="fa fa-save"></i> Save</button>
 							</form>
 						</div>
 						
-						<button type="button" class="btn btn-secondary btn-sm mb-2" onclick="this.classList.add('d-none'); document.getElementById('edit-comment-@comment.Id').classList.remove('d-none'); document.getElementById('view-comment-@comment.Id').classList.add('d-none');">Edit</button>
+						<button type="button" class="btn btn-primary btn-sm mb-2" onclick="this.classList.add('d-none'); document.getElementById('edit-comment-@comment.Id').classList.remove('d-none'); document.getElementById('view-comment-@comment.Id').classList.add('d-none');"><i class="fa fa-pencil"></i> Edit</button>
 						<delete-button
 							class="btn-sm mb-2"
 							asp-href="/UserFiles/Index?handler=DeleteComment&commentId=@comment.Id&returnUrl=@Context.ReturnUrl()"
@@ -116,16 +116,16 @@
 				<input type="hidden" name="fileId" value="@Model.Id "/>
 				<label class="form-control-label">Comment:</label>
 				<textarea class="form-control" name="comment"></textarea>
-				<button type="submit" class="btn btn-secondary mt-1">Post</button>
+				<button type="submit" class="btn btn-primary mt-1"><i class="fa fa-plus"></i> Post</button>
 			</form>
 			<hr />
 		</div>
 		<a asp-page="/UserFiles/Info" asp-page-handler="Download" asp-route-id="@Model.Id" class="card-link">
-			Download (@Model.FileSizeUncompressed.ToSizeString())
+			<i class="fa fa-download"></i> Download (@Model.FileSizeUncompressed.ToSizeString())
 		</a>
 
 		<a asp-page="/UserFiles/Info" asp-route-id="@Model.Id" class="card-link">
-			Info
+			<i class="fa fa-info-circle"></i> Info
 		</a>
 	</div>
 </div>
