--- a/TASVideos/Pages/Shared/_WikiLayoutFooter.cshtml
+++ b/TASVideos/Pages/Shared/_WikiLayoutFooter.cshtml
@@ -26,27 +26,25 @@ else
 </small>
 <br />
 
-<a
-	condition="@canEdit"
-	asp-page="/Wiki/Edit"
-	asp-route-path="@Model.PageName"
-	class="btn btn-primary btn-sm">
-	Edit
+<a condition="@canEdit"
+   asp-page="/Wiki/Edit"
+   asp-route-path="@Model.PageName"
+   class="btn btn-primary btn-sm">
+	<i class="fa fa-pencil"></i> Edit
 </a>
-<a
-	permission="MoveWikiPages"
-	asp-page="/Wiki/Move"
-	asp-route-path="@Model.PageName"
-	class="btn btn-warning btn-sm">Move
+<a permission="MoveWikiPages"
+   asp-page="/Wiki/Move"
+   asp-route-path="@Model.PageName"
+   class="btn btn-warning btn-sm">
+	<i class="fa fa-arrows"></i> Move
 </a>
-<delete-button
-	permission="DeleteWikiPages"
-	asp-href="/Wiki/DeletedPages/DeletePage?path=@Model.PageName"
-	warning-message="Are you sure you want to delete this page?"
-	class="btn btn-danger btn-sm">
-	Delete
+<delete-button permission="DeleteWikiPages"
+			   asp-href="/Wiki/DeletedPages/DeletePage?path=@Model.PageName"
+			   warning-message="Are you sure you want to delete this page?"
+			   class="btn btn-danger btn-sm">
+	<i class="fa fa-times"></i> Delete
 </delete-button>
-<a class="btn bg-info text-dark btn-sm" asp-page="/Wiki/PageHistory" asp-route-path="@Model.PageName">Page History</a>
-<a class="btn bg-info text-dark btn-sm" asp-page="/Wiki/Diff" asp-route-path="@Model.PageName">Last diff</a>
+<a class="btn bg-info text-dark btn-sm" asp-page="/Wiki/PageHistory" asp-route-path="@Model.PageName"><i class="fa fa-history"></i> Page History</a>
+<a class="btn bg-info text-dark btn-sm" asp-page="/Wiki/Diff" asp-route-path="@Model.PageName">Latest diff</a>
 <a class="btn bg-info text-dark btn-sm" asp-page="/Wiki/Referrers" asp-route-path="@Model.PageName">List referrers</a>
-<a class="btn bg-info text-dark btn-sm" asp-page="/Wiki/ViewSource" asp-route-path="@Model.PageName">View Source</a>
+<a class="btn bg-info text-dark btn-sm" asp-page="/Wiki/ViewSource" asp-route-path="@Model.PageName"><i class="fa fa-paragraph"></i> View Source</a>
