--- a/TASVideos/Pages/Shared/_WikiLayoutHeader.cshtml
+++ b/TASVideos/Pages/Shared/_WikiLayoutHeader.cshtml
@@ -7,7 +7,7 @@
 @if (canEdit)
 {
 	<div class="text-end">
-		<a asp-page="/Wiki/Edit" asp-route-path="@Model.PageName" class="btn btn-primary">Edit</a>
+		<a asp-page="/Wiki/Edit" asp-route-path="@Model.PageName" class="btn btn-primary border border-warning"><i class="fa fa-pencil"></i> Edit</a>
 	</div>
 	<hr />
 }
