--- a/TASVideos/Pages/Submissions/Publish.cshtml
+++ b/TASVideos/Pages/Submissions/Publish.cshtml
@@ -128,8 +128,8 @@
 	<hr />
 	@await Component.RenderWiki("System/FilesEditingHelp")
 	<fullrow class="text-center">
-		<submit-button class="btn btn-primary">Publish</submit-button>
-		<a asp-page="View" asp-route-id="@Model.Id" class="btn btn-secondary">Cancel</a>
+		<submit-button class="btn btn-primary"><i class="fa fa-save"></i> Publish</submit-button>
+		<a asp-page="View" asp-route-id="@Model.Id" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</fullrow>
 </form>
 
