--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -159,14 +159,14 @@
 		<div class="btn-toolbar">
 			<a condition="@canClaimAsJudge" asp-page="View" asp-route-id="@Model.Id" asp-page-handler="ClaimForJudging" class="btn btn-success mt-2 me-1">Claim</a>
 			<a condition="@ViewData.UserHas(PermissionTo.PublishMovies) && Model.Submission.Status == SubmissionStatus.Accepted" asp-page="View" asp-route-id="@Model.Id" asp-page-handler="ClaimForPublishing" class="btn btn-success mt-2 me-1">Claim</a>
-			<a asp-page="View" asp-page-handler="Download" asp-route-id="@Model.Id" class="btn btn-primary mt-2">Download</a>
-			<a condition="@Model.TopicId > 0" asp-page="/Forum/Topics/Index" asp-route-id="@Model.TopicId" class="btn btn-secondary ms-1 mt-2">Discuss and Vote</a>
+			<a asp-page="View" asp-page-handler="Download" asp-route-id="@Model.Id" class="btn btn-primary mt-2"><i class="fa fa-download"></i> Download</a>
+			<a condition="@Model.TopicId > 0" asp-page="/Forum/Topics/Index" asp-route-id="@Model.TopicId" class="btn btn-secondary ms-1 mt-2"><i class="fa fa-comments-o"></i> Discuss and Vote</a>
 			<span permission="EditSubmissions" class="btn-separator mt-2"></span>
-			<a condition="@canEdit" asp-page="Edit" asp-route-id="@Model.Id" class="btn btn-primary mt-2">Edit</a>
-			<a permission="CatalogMovies" asp-page="Catalog" asp-route-id="@Model.Id" class="ms-1 btn bg-info text-dark mt-2">Catalog</a>
+			<a condition="@canEdit" asp-page="Edit" asp-route-id="@Model.Id" class="btn btn-primary border border-warning mt-2"><i class="fa fa-pencil"></i> Edit</a>
+			<a permission="CatalogMovies" asp-page="Catalog" asp-route-id="@Model.Id" class="ms-1 btn bg-info text-dark border border-warning mt-2"><i class="fa fa-book"></i> Catalog</a>
 			<a condition="@canPublish" asp-page="Publish" asp-route-id="@Model.Id" class="ms-1 btn btn-warning mt-2">Publish</a>
 			<span class="btn-separator mt-2"></span>
-			<a asp-page="Index" class="btn btn-secondary mt-2">Back to Queue</a>
+			<a asp-page="Index" class="btn btn-secondary mt-2"><i class="fa fa-arrow-left"></i> Back to Queue</a>
 			<a asp-page="Index" asp-route-user="@Model.Submission.Submitter" class="ms-1 mt-2 btn btn-secondary">All by this submitter</a>
 		</div>
 	</div>
@@ -185,17 +185,16 @@
 	last edited by @Model.Submission.LastUpdateUser on @Model.Submission.LastUpdateTimestamp
 </small>
 <br />
-<a
-	asp-page="/Wiki/PageHistory"
-	asp-route-path="@(LinkConstants.SubmissionWikiPage + Model.Id)"
-	class="btn bg-info text-dark btn-sm">
-	Page History
+<a asp-page="/Wiki/PageHistory"
+   asp-route-path="@(LinkConstants.SubmissionWikiPage + Model.Id)"
+   class="btn bg-info text-dark btn-sm">
+	<i class="fa fa-history"></i> Page History
 </a>
 <a
 	asp-page="/Wiki/Diff"
 	asp-route-path="@(LinkConstants.SubmissionWikiPage + Model.Id)"
 	class="btn bg-info text-dark btn-sm">
-	Last diff
+	Latest diff
 </a>
 <a
 	asp-page="/Wiki/Referrers"
