--- a/TASVideos/Pages/Tiers/Create.cshtml
+++ b/TASVideos/Pages/Tiers/Create.cshtml
@@ -32,8 +32,8 @@
 		</column>
 	</row>
 	<div class="text-center mt-3">
-		<submit-button class="btn btn-primary">Save</submit-button>
-		<a asp-page="Index" class="btn btn-secondary">Cancel</a>
+		<submit-button class="btn btn-primary"><i class="fa fa-save"></i> Save</submit-button>
+		<a asp-page="Index" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
 
