--- a/TASVideos/Pages/UserFiles/ForUser.cshtml
+++ b/TASVideos/Pages/UserFiles/ForUser.cshtml
@@ -6,8 +6,8 @@
 }
 
 <a asp-page="Index" class="btn btn-secondary btn-sm mb-2">All User Files</a>
-<profile-link class="btn btn-secondary btn-sm mb-2" username="@Model.UserName">Profile for @Model.UserName</profile-link>
-<a asp-page="/UserFiles/Upload" class="btn btn-secondary btn-sm float-end">Upload</a>
+<profile-link class="btn btn-secondary btn-sm mb-2" username="@Model.UserName"><i class="fa fa-user-o"></i> Profile for @Model.UserName</profile-link>
+<a asp-page="/UserFiles/Upload" class="btn btn-secondary btn-sm float-end"><i class="fa fa-upload"></i> Upload</a>
 <partial name="_Pager" model="Model.Files" />
 
 @* ReSharper disable once UnusedVariable *@
