--- a/TASVideos/Pages/UserFiles/Upload.cshtml
+++ b/TASVideos/Pages/UserFiles/Upload.cshtml
@@ -50,8 +50,8 @@
 	</row>
 	<fullrow class="text-center">
 		@await Component.RenderWiki("System/WikiEditNote")
-		<submit-button class="btn btn-primary">Upload</submit-button>
-		<a href="/Profile/UserFiles" class="btn btn-secondary">Cancel</a>
+		<submit-button class="btn btn-primary"><i class="fa fa-upload"></i> Upload</submit-button>
+		<a href="/Profile/UserFiles" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</fullrow>
 </form>
 
