--- a/TASVideos/Pages/Users/Edit.cshtml
+++ b/TASVideos/Pages/Users/Edit.cshtml
@@ -204,7 +204,7 @@
 	</fullrow>
 	<hr />
 	<div class="text-center">
-		<button id="submit-btn" type="submit" class="btn btn-primary">Update</button>
-		<a asp-page="List" class="btn btn-secondary">Cancel</a>
+		<button id="submit-btn" type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Update</button>
+		<a asp-page="List" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 	</div>
 </form>
