--- a/TASVideos/Pages/Wiki/Diff.cshtml
+++ b/TASVideos/Pages/Wiki/Diff.cshtml
@@ -9,7 +9,7 @@
 <input type="hidden" asp-for="Diff.LeftMarkup" rows="8" class="form-control" />
 <input type="hidden" asp-for="Diff.RightMarkup" rows="8" class="form-control" />
 
-<a class="btn btn-secondary float-end" href="/@link">Back to Page</a>
+<a class="btn btn-secondary float-end" href="/@link"><span class="fa fa-arrow-left"></span> Back to Page</a>
 <row>
 	
 	<label class="me-3"><input name="diff-type" type="radio" value="1" checked="checked" /> Inline</label>
