--- a/TASVideos/Pages/Shared/_UserFileInfo.cshtml
+++ b/TASVideos/Pages/Shared/_UserFileInfo.cshtml
@@ -26,7 +26,6 @@
 				<delete-button
 					class="btn-sm",
 					warning-message="Are you sure you want to delete this file?"
-
 					asp-href="/UserFiles?handler=Delete&fileId=@Model.Id&returnUrl=@Context.ReturnUrl()"
 				>
 					<i class="fa fa-remove"></i>
@@ -88,7 +87,7 @@
 				{
 					<profile-link username="@comment.UserName"></profile-link><span> on </span><timezone-convert asp-for="@comment.CreationTimeStamp" />
 					<wiki-markup markup="@comment.Text" id="view-comment-@comment.Id"></wiki-markup>
-					<div condition="User.GetUserId() == comment.UserId">
+					<div condition="User.Has(PermissionTo.EditForumPosts) || User.GetUserId() == comment.UserId">
 						<div class="d-none" id="edit-comment-@comment.Id">
 							<form method="POST" asp-page="/UserFiles/Index" asp-route-handler="EditComment" asp-route-returnUrl="@Context.ReturnUrl()">
 								<input type="hidden" name="commentId" value="@comment.Id" />
