Refactors dark mode button toggle into a dropdown for the header
makes use of font awesome icons

--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
@@ -103,7 +103,6 @@
 	<footer class="mb-3">
 		<row class="justify-content-start align-items-center">
 			<p class="col-auto my-auto">&copy; @DateTime.UtcNow.Year - TASVideos <a href="https://github.com/adelikat/tasvideos/commit/@ViewData["VersionSha"]">v@(ViewData["Version"])</a></p>
-			<button class="btn btn-secondary btn-sm col-auto" id="ToggleDarkMode" onclick="toggleDarkMode()"><i class="fa fa-moon-o"></i> Toggle Dark Mode</button>
 		</row>
 	</footer>
 </div>
