fix typo in a comment

--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -47,7 +47,7 @@
 
 <row class="mt-2">
 	<div class="col-lg-6" condition="hasEncode">
-		@*Boilerplate boostrap stuff *@
+		@*Boilerplate bootstrap stuff *@
 		<div class="ratio ratio-16x9">
 			<div id="ytplayer"></div>
 		</div>
