--- a/TASVideos/Pages/Forum/Subforum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Subforum/Index.cshtml
@@ -42,7 +42,7 @@
                 <td>
                     @if (topic.LastPost != null)
                     {
-                        <timezone-convert asp-for="@topic.LastPostDateTime" /> <br />
+                        <timezone-convert asp-for="@topic.LastPostDateTime" relative-time="true" /> <br />
 						<profile-link username="@topic.LastPostUserName"></profile-link>
                         <a class="fa fa-arrow-circle-right" href="/Forum/p/@topic.LastPostId#@topic.LastPostId"/>
                     }
