--- a/TASVideos/Pages/Shared/Components/TabularMovieList/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/TabularMovieList/Default.cshtml
@@ -23,7 +23,7 @@
 					@foreach (var pub in Model)
 					{
 						<tr>
-							<td><timezone-convert asp-for="@pub.CreateTimestamp" date-only="true" /></td>
+							<td><timezone-convert asp-for="@pub.CreateTimestamp" date-only="true" relative-time="true"/></td>
 							<td>@pub.Game<span condition="!string.IsNullOrWhiteSpace(pub.Branch)"> "@(pub.Branch)"</span></td>
 							<td>
 								<pub-link id="pub.Id">@(pub.Time().ToStringWithOptionalDaysAndHours())</pub-link>
