--- a/TASVideos/Pages/Shared/_Profile.cshtml
+++ b/TASVideos/Pages/Shared/_Profile.cshtml
@@ -114,9 +114,9 @@
 							@Model.WikiEdits.TotalEdits
 						</a> Total Edits
 					</p>
-					<label>Last Edit On: <timezone-convert asp-for="@Model.WikiEdits.LastEditDateTime" date-only="true" /></label>
+					<label>Last Edit: <timezone-convert asp-for="@Model.WikiEdits.LastEditDateTime" date-only="true" /></label>
 					<br />
-					<label>First Edit On: <timezone-convert asp-for="@Model.WikiEdits.FirstEditDateTime" date-only="true" /></label>
+					<label>First Edit: <timezone-convert asp-for="@Model.WikiEdits.FirstEditDateTime" date-only="true" /></label>
 				</div>
 			</cardbody>
 		</card>
