fix profile PM icon

--- a/TASVideos/Pages/Shared/_Profile.cshtml
+++ b/TASVideos/Pages/Shared/_Profile.cshtml
@@ -9,7 +9,7 @@
 					   asp-page="/Messages/Create"
 					   asp-route-defaultToUser="@Model.UserName"
 					   class="btn btn-secondary btn-sm">
-						<i class="fa fa-quote-right"></i> PM
+						<i class="fa fa-envelope"></i> PM
 					</a>
 					<a permission="EditUsers"
 					   asp-page="/Users/Edit"
