--- a/TASVideos/Pages/RssFeeds/_RssChannel.cshtml
+++ b/TASVideos/Pages/RssFeeds/_RssChannel.cshtml
@@ -21,6 +21,6 @@
 <ttl>60</ttl>
 <image>
 	<title>@Model.Title</title>
-	<link>@(baseUrl)/NewMovies.html</link>
+	<link>@(baseUrl)/@Model.Link</link>
 	<url>@(baseUrl)/images/tasvideos_rss.png</url>
 </image>
